# ros

./: README.md  frames_2024-11-07_09.50.35.gv  my_map.pgm  sync_async.bash
arduino_project/lcd/: lcd.ino
arduino_project/servo/: servo.ino
arduino_project/switch/: switch.ino
src/arith/: package.xml  setup.py
src/arith/arith/: argument.py  calculator.py  checker.py
src/atith_cpp/: CMakeLists.txt  package.xml
src/homework/my_package/: package.xml  setup.py
src/homework/my_package/my_package/: hello_class.py  hello_pub.py  hello_sub.py  my_node.py  time_pub.py
src/move_turtle/: package.xml  setup.py
src/move_turtle/move_turtle/: RPi_I2C_driver.py  arduino_lcd.py  arduino_led.py  arduino_servo.py  arduino_switch.py  follow_ar_marker.py  follow_wall.py  follow_way_points.py  lcd_gpio.py  led_server.py  move_cicle.py  move_rect.py  patrol_maipulator.py  servo_sub.py
src/move_turtle/urdf/: macroed.rudf.xacro  model.sdf  myfirst.urdf  turtlebot3_burger.urdf
src/move_turtle_cpp/: CMakeLists.txt  package.xml
src/move_turtle_cpp/src/: hello_moveit.cpp
src/ros2_aruco/ros2_aruco/ros2_aruco/: aruco_node.py
src/ros2env/: package.xml  setup.py
src/ros2env/ros2env/verb/: __init__.py
src/simple_ros/: package.xml  setup.py
src/simple_ros/launch/: hello.launch.py  moveturtle.launch.py  moveturtle_time.launch .py  parameter.launch.py  service_test.launch.py
src/simple_ros/param/: simple_parameter.yaml  simple_parameter2.yaml
src/simple_ros/simple_ros/: action_server.py  deadline .py  hello.py  hello_class.py  hello_pub.py  hello_sub.py  lifespan .py  logging_example.py  move_turtle.py  move_turtle_time.py  service_client.py  service_server.py  simple_parameter .py  simple_parameter2.py  simple_parameter_node.py  simple_parameter_node2.py  time_pub.py  user_int_pub.py
src/simple_ros_cpp/: CMakeLists.txt  package.xml
src/simple_ros_cpp/include/image_pipeline/: camera_node.hpp
src/simple_ros_cpp/launch/: tf_turtle.launch.py
src/simple_ros_cpp/src/: action_server.cpp  cyclic_pipline.cpp  dynamic_tf.cpp  hello_pub.cpp  hello_pub_class_method.cpp  hello_sub.cpp  lifecycle_service.cpp  logging_example.cpp  move_turtle.cpp  publish_map.cpp  publish_map_with_lidar.cpp  service_client_int.cpp  simple_parameter.cpp  static_tf.cpp  sync_async_sub.cpp  sync_async_writer.cpp  two_node_popline.cpp
src/tb_interface/: CMakeLists.txt
src/tb_interface/srv/: LcdDisplay.srv
src/user_interface/: CMakeLists.txt  package.xml
src/user_interface/msg/: ArithmeticArgument.msg
src/user_interface/srv/: ArithmeticOperator.src  add_and_odd.hpp
